fixed shift

--- a/src/components/Bestseller/Bestseller.css
+++ b/src/components/Bestseller/Bestseller.css
@@ -1,48 +1,4 @@
 /* Bestseller styles */
-/* .bestseller {
-  background-color: #fff;
-  padding: 1rem;
-}
-
-.product-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-}
-
-.product-item {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: calc(25% - 10px); 
-  padding: 0.5rem;
-}
-
-.product-image {
-  width: 100%;
-  height: auto;
-  border: 5px solid var(--color-primary);
-  box-sizing: border-box;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #fff;
-}
-
-
-.product-image img {
-  max-width: 100%; 
-  height: auto;
-  object-fit: contain;
-  max-height: 100%; 
-}
-
-
-.product-name {
-  margin-top: 10px;
-} */
-
 .bestseller {
   background-color: #fff;
   padding: 1rem;
@@ -56,7 +12,7 @@
 }
 
 .product-item {
-  flex: 0 0 calc(20% - 20px); /* Adjusted width to account for the gap */
+  flex: 0 0 calc(20% - 20px);
   padding: 10px;
   box-sizing: border-box;
   display: flex;
@@ -68,7 +24,7 @@
 .product-image {
   width: 100%;
   max-width: 200px;
-  height: 200px; /* Set a fixed height for all images */
+  height: 200px;
   border: 5px solid var(--color-primary);
   padding: .5rem;
   box-sizing: border-box;
@@ -86,18 +42,17 @@
 
 @media (max-width: 768px) {
   .product-item {
-    width: 100%; /* Make product items take up full width on smaller screens */
+    width: 100%; 
   }
 
   .product-image {
-    max-width: 150px; /* Adjust product image size for smaller screens */
+    max-width: 150px; 
     padding: 0.25rem;
   }
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
   .product-image {
-    max-width: 180px; /* Adjust product image size for wider screens */
     padding: 0.25rem;
   }
 }
